# doctoralia-scrapper

./: .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  AUTOMATED_SETUP.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DAILY_AUTOMATION.md  DONE.md  Dockerfile  IMPROVEMENTS.md  LICENSE  Makefile  README.md  README_N8N.md  README_OPTIMIZED.md  ROLLOUT_PLAN.md  SECURITY.md  TODO.md  bruna_pinto_gomes.json  compare_methods.py  debug_clicking.py  debug_extract_all.py  debug_html.py  docker-compose.ghcr.yml  docker-compose.prod.yml  docker-compose.yml  examine_comments.py  find_selector.py  fix_chromedriver.py  impeccable.md  list_jobs_patch.py  main.py  pyproject.toml  requirements-dev.txt  requirements-optimized.txt  requirements.txt  (+7 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-format.yml  auto-merge.yml  ci.yml  codeql.yml  dependabot-automerge.yml  dependabot-generated-files.yml  dependency-review.yml  docker.yml  n8n-integration.yml  pages.yml  release.yml
caddy/: Caddyfile
config/: README.md  README_TEMPLATES.md  __init__.py  config.example.json  config.json  settings.py  telegram_templates.py  templates.py
debug/: debug_clicking.py  debug_extract_all.py  debug_extraction.py  debug_html.py  debug_reviews.py  enhanced_debug.py
docs/: Home.md  _Footer.md  _Sidebar.md  about.md  api.md  changelog.md  dashboard-workspace.md  deployment.md  development.md  n8n-integration.md  n8n-workflows-guide.md  n8n.md  operations.md  overview.md  production-deployment.md  quick-start-guide.md  quickstart.md  telegram-messages-improvement.md  telegram-notifications.md  templates.md
examples/n8n/: async-webhook-workflow.json  batch-processing-workflow.json  complete-doctoralia-workflow.json  sync-scraping-workflow.json
scripts/: backup_restore.sh  bootstrap_setup.py  check_daily_results.sh  cleanup_redis_jobs.py  daemon.py  daily_scrape.sh  docker_smoke_prod.py  health_check.py  install_deps.py  manage_daily_cron.sh  monitor_scraping.py  run_full_workflow.py  setup.py  status_check.sh  system_diagnostic.py  update_drivers.py
scripts/dev/: find_selector.py
scripts/dev/debug/: debug_clicking.py  debug_extract_all.py  debug_extraction.py  debug_html_v2.py  enhanced_debug.py  simple_debug.py
src/: api.py  api_server.py  auth.py  circuit_breaker.py  dashboard.py  enhanced_scraper.py  env_validator.py  error_handling.py  health_checker.py  logger.py  multi_site_scraper.py  nltk_security_patch.py  performance_monitor.py  response_generator.py  response_quality_analyzer.py  scraper.py  scraper.py.backup  secure_config.py  telegram_notifier.py
src/api/schemas/: auth.py  common.py  notifications.py  requests.py  settings.py
src/api/v1/: _helpers.py  _state.py  deps.py  main.py  metrics_store.py  middleware.py  providers.py
src/api/v1/routers/: analyze.py  auth.py  generate.py  health.py  jobs.py  metrics.py  scrape.py  settings.py  telegram.py
src/config/: __init__.py  config.example.json  settings.py  telegram_templates.py  templates.py
src/dashboard/: __init__.py  __main__.py  api_proxy.py  app.py  auth.py  notifications.py  pages.py  reports.py  services.py  user_profile.py  workspace.py
src/db/: __init__.py  base.py  init_db.py  models.py
src/integrations/n8n/: normalize.py  privacy.py
src/jobs/: queue.py  tasks.py
src/providers/: __init__.py  base.py  claude.py  gemini.py  openai.py
src/services/: stats.py  telegram_schedule_service.py  workspace_service.py
src/static/: styles.css
static/: styles.css
templates/: base.html  dashboard.html  health.html  history.html  login.html  profiles.html  reports.html  responses.html  settings.html  telegram_schedule.html  user_profile.html
tests/: __init__.py  conftest.py  test_api_deps.py  test_api_endpoints.py  test_circuit_breaker.py  test_cli.py  test_config.py  test_dashboard.py  test_dashboard_additional.py  test_db_base.py  test_db_init.py  test_db_models.py  test_e2e_flow.py  test_enhanced_scraper.py  test_env_validator.py  test_error_handling.py  test_health_checker.py  test_jobs_tasks.py  test_logger.py  test_multi_site_scraper.py  test_performance_monitor_extended.py  test_redis_integration.py  test_response_generator.py  test_response_generator_api.py  test_response_generator_utils.py  test_response_quality_analyzer.py  test_scraper.py  test_scraper_parsing.py  test_secure_config.py  test_security_performance.py  test_telegram_notifier.py  test_telegram_notifier_additional.py  test_telegram_notifier_extended.py  test_telegram_schedule_service.py  test_workspace_service.py
tests/fixtures/: __init__.py
tests/n8n/: test_api.py  test_normalize.py
