[tool.poetry]
name = "doctoralia-scrapper"
version = "0.1.0"
description = "Sistema automatizado para scraping de avaliações e geração de respostas no Doctoralia com notificações via Telegram."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
beautifulsoup4 = "^4.13.4"
cryptography = "^46.0.0"
nltk = "^3.9.1"
certifi = "^2025.4.26"
charset-normalizer = "^3.4.2"
h11 = "^0.16.0"
idna = "^3.10"
lxml = "^6.0.2"
mypy-extensions = "^1.1.0"
outcome = "^1.3.0"
packaging = "^25.0"
pathspec = "^0.12.1"
psutil = "^7.0.0"
pysocks = "^1.7.1"
python-dotenv = "^1.1.0"
requests = "^2.32.5"
schedule = "^1.2.2"
selenium = "^4.33.0"
sniffio = "^1.3.1"
sortedcontainers = "^2.4.0"
soupsieve = "^2.7"
trio = "^0.30.0"
trio-websocket = "^0.12.2"
types-psutil = "^7.0.0.20250601"
types-requests = "^2.32.0.20250602"
urllib3 = "^2.4.0"
webdriver-manager = "^4.0.2"
websocket-client = "^1.8.0"
wsproto = "^1.2.0"
attrs = "^23.1.0" # Version from your lock file, adjusted for poetry
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
flask = "^3.0.0"
flask-cors = "^4.0.0"
redis = "^6.4.0"
rq = "^2.6.0"
flake8 = "^7.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.11.1"
pytest-asyncio = ">=0.21.0"
httpx = "~=0.27.0"
black = ">=23.7.0"
isort = ">=5.12.0"
mypy = ">=1.16.0"
types-beautifulsoup4 = ">=4.12.0"
flake8 = ">=6.0.0"
pylint = ">=2.17.0"
bandit = ">=1.7.5"
safety = ">=2.3.0"
pre-commit = ">=3.3.0"
sphinx = ">=7.0.0"
sphinx-rtd-theme = ">=1.3.0"
line-profiler = ">=4.0.0"
memory-profiler = ">=0.61.0"
ipdb = ">=0.13.0"
pdbpp = ">=0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "."
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::DeprecationWarning",
]
