[project]
name = "doctoralia-scrapper"
version = "2.3.1"
description = "Sistema profissional de monitoramento e resposta a avaliações médicas. Inclui web scraping resiliente, API REST, análise de sentimento, geração inteligente de respostas e integração com n8n/Telegram."
authors = [{name = "Bernardo Gomes", email = "bernardopg@users.noreply.github.com"}]
maintainers = [{name = "Bernardo Gomes", email = "bernardopg@users.noreply.github.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dynamic = ["dependencies"]
keywords = [
    "doctoralia",
    "scraping",
    "web-scraping",
    "selenium",
    "healthcare",
    "medical-reviews",
    "sentiment-analysis",
    "fastapi",
    "automation",
    "reviews",
    "nlp",
    "telegram-bot",
    "n8n",
    "api",
    "python"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/bernardopg/doctoralia-scrapper"
Repository = "https://github.com/bernardopg/doctoralia-scrapper"
Documentation = "https://github.com/bernardopg/doctoralia-scrapper/blob/main/docs/Home.md"
"Bug Tracker" = "https://github.com/bernardopg/doctoralia-scrapper/issues"
Changelog = "https://github.com/bernardopg/doctoralia-scrapper/blob/main/CHANGELOG.md"
Discussions = "https://github.com/bernardopg/doctoralia-scrapper/discussions"

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
anyio = "^4.14.1"
beautifulsoup4 = "^4.14.3"
cryptography = "^49.0.0"
nltk = "^3.9.4"
certifi = "^2026.6.17"
charset-normalizer = "^3.4.6"
h11 = "^0.16.0"
idna = "^3.11"
lxml = "^6.0.2"
mypy-extensions = "^1.1.0"
outcome = "^1.3.0"
packaging = "^26.0"
pathspec = "^1.0.4"
psutil = "^7.2.2"
pysocks = "^1.7.1"
python-dotenv = "^1.2.2"
requests = "^2.33.0"
schedule = "^1.2.2"
selenium = "^4.45.0"
sniffio = "^1.3.1"
sortedcontainers = "^2.4.0"
soupsieve = "^2.8"
trio = "^0.33.0"
trio-websocket = "^0.12.2"
types-psutil = "^7.2.2.20260130"
types-requests = "^2.32.0.20250602"
urllib3 = "^2.6.3"
webdriver-manager = "^4.0.2"
websocket-client = "^1.9.0"
wsproto = "^1.3.2"
attrs = ">=23.1,<27.0" # Version from your lock file, adjusted for poetry
fastapi = "^0.138.1"
uvicorn = {extras = ["standard"], version = ">=0.42,<0.50"}
pydantic = "^2.12.5"
flask = "^3.1.3"
flask-cors = "^6.0.5"
werkzeug = "^3.1.6"
redis = ">=8.0.1,<9.0"
rq = "^2.10.0"
flake8 = "^7.3.0"
starlette = "^1.3.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-cov = "^7.1.0"
pytest-mock = "^3.15.1"
pytest-asyncio = "^1.4.0"
black = ">=23.7.0"
isort = ">=5.12.0"
mypy = ">=1.16.0"
types-beautifulsoup4 = ">=4.12.0"
flake8 = ">=6.0.0"
pylint = "^4.0.6"
bandit = ">=1.7.5"
pip-audit = ">=2.7.0"
pre-commit = ">=3.3.0"
sphinx = ">=7.0.0"
sphinx-rtd-theme = ">=1.3.0"
line-profiler = ">=4.0.0"
memory-profiler = ">=0.61.0"
ipdb = ">=0.13.0"
pdbpp = ">=0.10.0"
poetry-plugin-export = "^1.10.0"
httpx2 = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "."
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
